@startuml
skinparam classAttributeIconSize 0

class GetUnloadingLoadingMapController{
    +getUnloadingLoadingMap()
}

class Company {
    +getCargoManifestStoreDB()
}

class ShipStoreDB {
    +getUnloadingLoadingMap(dataBaseConnection)
}

GetUnloadingLoadingMapController ..> Company
GetUnloadingLoadingMapController ..> ShipStoreDB
Company "1" -- "1" ShipStoreDB : uses >

@enduml